Se agregan las pqr , se cambian estilos y se agrega la realizacion de la cita

--- a/src/views/appointment/list.hbs
+++ b/src/views/appointment/list.hbs
@@ -22,6 +22,9 @@
                     <label for="text">Estado</label>
                     <input type="text" class="form-control mb-3" value="{{state}}" readonly />
 
+                    <a class="btn btn-primary" href="/appointment/done/{{id}}">
+                        Realizada
+                    </a>
                     <a class="btn btn-danger" href="/appointment/delete/{{id}}">
                         Cancelar cita
                     </a>
