--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -116,3 +116,24 @@ a.text {
 .navbar-brand {
   font-size: 1.1rem;
 }
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1rem;
+}
+
+th,
+td {
+  padding: 0.75rem;
+  text-align: left;
+  border-bottom: 1px solid #dee2e6;
+}
+
+th {
+  font-weight: 700;
+}
+
+tbody tr:hover {
+  background-color: #f5f5f5;
+}
