Se crea puerta de calidad para sonar

--- a/src/views/catalogo.hbs
+++ b/src/views/catalogo.hbs
@@ -5,7 +5,7 @@
                 <a href="/signup" class="text">Registrate</a>
                 o
                 <a href="/signin" class="text">Ingresa</a>
-                para agendar tu cita
+                para agendar tu cita.
             </h4>
         </div>
     </div>
