Se corrigen errores reportados en la entrega

--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -1,3 +1,6 @@
+<div class="col-lg-12 text-center my-2" style="color: white;">
+    <h1>Modifica el precio de las uñas</h1>
+</div>
 <form id="admin-form" method="POST">
   <input type="hidden" name="price">
   <table>
