--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -1,3 +1,6 @@
+<div class="col-lg-12 text-center my-2" style="color: white;">
+    <h1>Lista de citas</h1>
+</div>
 <div class="container p-4">
   <div class="row">
     {{#each appointment}}
@@ -22,7 +25,7 @@
           <label for="text">Estado</label>
           <input type="text" class="form-control mb-3" value="{{state}}" readonly />
 
-          <a class="btn btn-danger" href="/appointment/delete/{{id}}">
+          <a class="btn btn-danger" onclick="confirmDelete({{id}})">
             Cancelar cita
           </a>
           <a class="btn btn-secondary" href="/appointment/edit/{{id}}">
@@ -56,3 +59,11 @@
     {{/each}}
   </div>
 </div>
+
+<script>
+function confirmDelete(id) {
+    if (confirm('¿Estás seguro de que quieres eliminar esta cita?')) {
+        window.location.href = `/appointment/delete/${id}`;
+    }
+}
+</script>
