--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -121,6 +121,7 @@ table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 1rem;
+  color: white;
 }
 
 th,
@@ -135,5 +136,10 @@ th {
 }
 
 tbody tr:hover {
-  background-color: #f5f5f5;
+  background-color: #383838;
+}
+
+.fixed-size-button {
+  width: 130px;  /* Cambia este valor según tus necesidades */
+  height: 50px;  /* Cambia este valor según tus necesidades */
 }
