--- a/src/views/appointment/records.hbs
+++ b/src/views/appointment/records.hbs
@@ -20,7 +20,7 @@
             <div class="card card-body text-center bg-dark text-light">
                 <h2>No hay citas en tu historial</h2>
                 <a href="/appointment/add" class="btn bg-color-button  m-4">
-                    Agend Una!
+                    Agenda una cita ahora mismo!
                 </a>
             </div>
         </div>
