--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -18,7 +18,7 @@
           <input type="password" name="password" placeholder="contraseña" class="form-control mb-3" />
         </div>
         <button class="btn bg-color-button btn-block">
-          Login
+          Ingresar
         </button>
 
     </div>
