--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -32,7 +32,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/statistics">Estadisticas</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/admin">Admin</a>
+            <a class="dropdown-item" href="/admin">Funciones de administrador</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/listpqr">Lista de pqr</a>
           </div>
