--- a/src/views/pqr/listapqr.hbs
+++ b/src/views/pqr/listapqr.hbs
@@ -1,3 +1,6 @@
+<div class="col-lg-12 text-center my-2" style="color: white;">
+    <h1>Lista de tus PQR/h1>
+</div>
 <table>
     <thead>
         <tr>
